--- a/clients/Android/Grapevine/app/src/main/res/layout/event_list_view.xml
+++ b/clients/Android/Grapevine/app/src/main/res/layout/event_list_view.xml
@@ -10,29 +10,31 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:src="@drawable/blank_calendar"/>
+                android:layout_width="@dimen/calendar_size"
+                android:layout_height="@dimen/calendar_size"
+                android:src="@drawable/blank_calendar"
+                android:layout_marginRight="10sp"/>
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
                 <TextView
-                    android:layout_width="60dp"
+                    android:layout_width="@dimen/calendar_size"
                     android:layout_height="wrap_content"
                     android:text="Nov"
-                    android:textSize="14dp"
+                    android:textSize="@dimen/event_feed_month_size"
                     android:gravity="center"
+                    android:textColor="@color/white"
                     android:id="@+id/event_month"/>
                 <TextView
-                    android:layout_width="55sp"
-                    android:layout_height="40sp"
+                    android:layout_width="@dimen/calendar_page_day_container"
+                    android:layout_height="@dimen/calendar_page_day_container"
+                    android:layout_marginLeft="@dimen/calendar_page_day_offset"
                     android:text="18"
-                    android:textSize="30dp"
+                    android:textSize="@dimen/calendar_page_day_text"
                     android:gravity="center"
                     android:id="@+id/event_day"/>
             </LinearLayout>
-
         </RelativeLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -43,16 +45,13 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/event_title"
                 android:textSize="@dimen/event_feed_title_size"
-                android:text="this is a long title"/>
-
+                android:text="this is a long title"
+                android:singleLine="true"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/event_time"
-                android:text="event time"
-                />
+                android:text="event time"/>
         </LinearLayout>
-
     </LinearLayout>
-
 </LinearLayout>
