--- a/clients/Android/Grapevine/app/src/main/res/layout/follow_feed.xml
+++ b/clients/Android/Grapevine/app/src/main/res/layout/follow_feed.xml
@@ -48,8 +48,8 @@
     <ProgressBar
         android:id="@+id/follow_feed_progress"
         style="@android:style/Widget.ProgressBar.Small"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="@dimen/progress_spinner_size"
+        android:layout_height="@dimen/progress_spinner_size"
         android:layout_gravity="center"
         android:visibility="invisible"/>
     <TextView
