--- a/clients/Android/Grapevine/app/src/main/res/values/strings_activity_main_login.xml
+++ b/clients/Android/Grapevine/app/src/main/res/values/strings_activity_main_login.xml
@@ -3,9 +3,8 @@
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
+    <string name="prompt_password">Password</string>
     <string name="action_sign_in">Log in</string>
-
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
