--- a/clients/Android/Grapevine/app/src/main/res/menu/menu_event_feed.xml
+++ b/clients/Android/Grapevine/app/src/main/res/menu/menu_event_feed.xml
@@ -7,4 +7,5 @@
         android:orderInCategory="5" app:showAsAction="always" android:icon="@drawable/ic_today_white_48dp"/>
     <item android:id="@+id/action_add_group" android:title="@string/title_activity_manage_feeds" android:icon="@drawable/ic_comment_white_48dp"
         android:orderInCategory="100" app:showAsAction="always"/>
+    <item android:id="@+id/action_refresh_feed" android:title="@string/refresh" android:orderInCategory="150" app:showAsAction="never"/>
 </menu>
