--- a/clients/Android/Grapevine/app/src/main/res/layout/manage_feeds.xml
+++ b/clients/Android/Grapevine/app/src/main/res/layout/manage_feeds.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="cs.lmu.grapevine.activities.FollowFeed">
+    tools:context="cs.lmu.grapevine.activities.ManageFeeds">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,7 +17,6 @@
         android:hint="@string/add_group_hint"
         android:textSize="@dimen/radio_button_size"
         android:id="@+id/feed_name"/>
-
     <RadioGroup
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -37,7 +36,6 @@
             android:textColor="@color/twitter"
             android:onClick="toggleButtonIfInputsValid"/>
     </RadioGroup>
-
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -47,7 +45,7 @@
         android:enabled="false"/>
     <ProgressBar
         android:id="@+id/follow_feed_progress"
-        style="@android:style/Widget.ProgressBar.Small"
+        style="?android:attr/progressBarStyleLarge"
         android:layout_width="@dimen/progress_spinner_size"
         android:layout_height="@dimen/progress_spinner_size"
         android:layout_gravity="center"
@@ -64,7 +62,7 @@
         android:gravity="center"/>
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="fill_parent">
-
+        android:layout_height="fill_parent"
+        android:id="@+id/currently_following">
     </ListView>
 </LinearLayout>
