--- a/clients/Android/Grapevine/app/src/main/res/values/dimens.xml
+++ b/clients/Android/Grapevine/app/src/main/res/values/dimens.xml
@@ -4,7 +4,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="create_account_password_margin">20dp</dimen>
     <dimen name="event_title_size">27sp</dimen>
-    <dimen name="radio_button_size">25sp</dimen>
+    <dimen name="radio_button_size">20sp</dimen>
     <dimen name="calendar_feed_date_container_size">16sp</dimen>
     <dimen name="event_feed_title_size">18sp</dimen>
     <dimen name="event_feed_month_size">12dp</dimen>
@@ -16,4 +16,7 @@
     <dimen name="login_button_margin_top">16dp</dimen>
     <dimen name="login_button_width">0dp</dimen>
     <dimen name="login_logo">150dp</dimen>
+    <dimen name="feed_list_name_size">23sp</dimen>
+    <dimen name="social_media_icon_size">50dp</dimen>
+    <dimen name="section_title">25sp</dimen>
 </resources>
